# apodora

./: .travis.yml  README.md  README.rst  requirements.dev.txt  setup.cfg  setup.py  tox.ini
examples/: 27.py  examples.py
examples/simple_param/: silly_program.py  simple_param.py
src/apodora/: __init__.py  cfg.py  program.py  types.py  util.py
src/apodora/helpers/: __init__.py  blocks.py  imports.py  method_collector.py  methods.py
src/apodora/models/: __init__.py  block.py  method.py  module.py  program.py
src/apodora/visualise/: __init__.py  import_graph.py
