[metadata]
name = apodora
author = Christopher Timperley
author-email = christimperley@googlemail.com
url = https://github.com/ChrisTimperley/apodora
description = Static analysis for Python
long-description = file: README.rst
keywords = analysis
license = Apache License, Version 2.0
include_package_data = True
classifiers =
  Natural Language :: English
  Intended Audience :: Developers
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8

[options]
python_requires = >= 3.6
install_requires =
  attrs ~= 19.3.0
  parso ~= 0.7.1
  sourcelocation ~= 1.0.2
  typing-extensions >= 3.7.2
package_dir =
  =src
packages = find:

[options.packages.find]
where = src

[mypy]
ignore_missing_imports = True
